--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <i class="fa-brands fa-instagram ms-3"></i>
                     <i class="fa-brands fa-twitter ms-3"></i>
                 </div>
-                <img src="/assests/images/logo.png" class="img mx-auto mt-4" alt="image">
+                <img src="assests/images/logo.png" class="img mx-auto mt-4" alt="image">
                 <div class=" d-none d-sm-block">
                     <p class=" me-5 mt-5 number d-flex justify-content-center align-items-center mx-md-0">Call
                         Us:+9998172499</p>
