--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 commodo consequat. Duis aute dolor in reprehen derit in voluptate velit esse cillum.</p>
                         </div>
                         <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 mt-md-5">
-                            <img src="/assests/images/about image.jpg" class="img-fluid" alt="image">
+                            <img src="assests/images/about image.jpg" class="img-fluid" alt="image">
                         </div>
                     </div>
                 </div>
@@ -144,22 +144,22 @@
                     <div class="swiper mySwiper mt-5">
                         <div class="swiper-wrapper mt-5">
                             <div class="swiper-slide">
-                                <img src="/assests/images/items1.jpg" alt="image">
+                                <img src="assests/images/items1.jpg" alt="image">
                             </div>
                             <div class="swiper-slide">
-                                <img src="/assests/images/items2.jpg" alt="image">
+                                <img src="assests/images/items2.jpg" alt="image">
                             </div>
                             <div class="swiper-slide">
-                                <img src="/assests/images/items3.jpg" alt="image">
+                                <img src="assests/images/items3.jpg" alt="image">
                             </div>
                             <div class="swiper-slide">
-                                <img src="/assests/images/items4.jpg" alt="image">
+                                <img src="assests/images/items4.jpg" alt="image">
                             </div>
                             <div class="swiper-slide">
-                                <img src="/assests/images/items5.jpg" alt="image">
+                                <img src="assests/images/items5.jpg" alt="image">
                             </div>
                             <div class="swiper-slide">
-                                <img src="/assests/images/items6.jpg" alt="image">
+                                <img src="assests/images/items6.jpg" alt="image">
                             </div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                             </div>
                             <div class="d-flex text-light">
                                 <div class="review mt-4">
-                                    <img src="/assests/images/customer1.png" class="img-fluid" alt="image">
+                                    <img src="assests/images/customer1.png" class="img-fluid" alt="image">
                                 </div>
                                 <div class="text">
                                     <p class="ms-3 mt-4 pt-2">Wilma Mumduya</p>
@@ -250,7 +250,7 @@
                             </div>
                             <div class="d-flex text-light">
                                 <div class="review mt-4">
-                                    <img src="/assests/images/customer2.png" class="img-fluid" alt="image">
+                                    <img src="assests/images/customer2.png" class="img-fluid" alt="image">
                                 </div>
                                 <div class="text">
                                     <p class="ms-3 mt-4 pt-2">Wilma Mumduya</p>
@@ -273,7 +273,7 @@
                             </div>
                             <div class="d-flex text-light">
                                 <div class="review mt-4">
-                                    <img src="/assests/images/customer3.png" class="img-fluid" alt="image">
+                                    <img src="assests/images/customer3.png" class="img-fluid" alt="image">
                                 </div>
                                 <div class="text">
                                     <p class="ms-3 mt-4 pt-2">Wilma Mumduya</p>
@@ -315,7 +315,7 @@
                             <div class="card mb-3 border border-dark">
                                 <div class="row g-0  ">
                                     <div class="col-md-6" style="background-color: black;">
-                                        <img src="/assests/images/blog1.jpg" class="img-fluid rounded-start" alt="">
+                                        <img src="assests/images/blog1.jpg" class="img-fluid rounded-start" alt="">
                                     </div>
                                     <div class="card col-md-6 " style="background-color: black;">
                                         <div class="card-body">
@@ -340,7 +340,7 @@
                             <div class="card mb-3 w-100  border border-dark  ">
                                 <div class="row g-0">
                                     <div class="col-md-6" style="background-color: black;">
-                                        <img src="/assests/images/blog2.jpg" class="img-fluid" alt="...">
+                                        <img src="assests/images/blog2.jpg" class="img-fluid" alt="...">
                                     </div>
                                     <div class="card col-md-6" style="background-color: black;">
                                         <div class="card-body">
@@ -392,22 +392,22 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-3">
                             <div>
-                                <img src="/assests/images/instra1.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra1.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3 ">
                             <div class="d-flex justify-content-md-end">
-                                <img src="/assests/images/instra2.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra2.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div>
-                                <img src="/assests/images/instra3.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra3.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div class="d-flex justify-content-md-end">
-                                <img src="/assests/images/instra4.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra4.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                     </div>
@@ -426,7 +426,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 d-flex justify-content-center  mt-5 text-sm-center">
-                            <img src="/assests/images/logo.png" class="img-fluid" alt="image">
+                            <img src="assests/images/logo.png" class="img-fluid" alt="image">
                         </div>
 
                     </div>
