--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <i class="fa-brands fa-instagram ms-3"></i>
                         <i class="fa-brands fa-twitter ms-3"></i>
                     </div>
-                    <img src="/assests/images/logo.png" class="img mx-auto mt-4" alt="image">
+                    <img src="assests/images/logo.png" class="img mx-auto mt-4" alt="image">
                     <div class=" d-none d-sm-block">
                         <p class=" me-5 mt-5 number d-flex justify-content-center align-items-center mx-md-0">Call
                             Us:+9998172499</p>
@@ -139,7 +139,7 @@
                                         cillum.</p>
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 mt-md-5">
-                                    <img src="/assests/images/about image.jpg" class="img-fluid" alt="image">
+                                    <img src="assests/images/about image.jpg" class="img-fluid" alt="image">
                                 </div>
                             </div>
                         </div>
