--- a/cake.html
+++ b/cake.html
@@ -246,22 +246,22 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-3">
                             <div>
-                                <img src="/assests/images/instra1.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra1.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3 ">
                             <div class="d-flex justify-content-md-end">
-                                <img src="/assests/images/instra2.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra2.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div>
-                                <img src="/assests/images/instra3.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra3.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div class="d-flex justify-content-md-end">
-                                <img src="/assests/images/instra4.jpg" alt="image" class="img-fluid mt-2">
+                                <img src="assests/images/instra4.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                     </div>
