--- a/cake.html
+++ b/cake.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -243,14 +242,14 @@
             <!-- SECTION FIVE START  -->
             <section>
                 <div class="container mt-5">
-                    <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-center text-center">
                         <div class="col-lg-3">
                             <div>
                                 <img src="assests/images/instra1.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
                         <div class="col-lg-3 ">
-                            <div class="d-flex justify-content-md-end">
+                            <div>
                                 <img src="assests/images/instra2.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
@@ -260,7 +259,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="d-flex justify-content-md-end">
+                            <div>
                                 <img src="assests/images/instra4.jpg" alt="image" class="img-fluid mt-2">
                             </div>
                         </div>
